--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,7 @@
       /* Streamlined font sizes */
       --frontpage-heading-size: clamp(3rem, 8vw, 4.5em);
       --heading-size: clamp(2rem, 7vw, 4em);
-      --text-size: clamp(1rem, 4vw, 1.5em);
+      --text-size: clamp(1.2rem, 4.5vw, 1.5em);
       --subheading-size: clamp(1.5rem, 5.5vw, 3em);
     }
 
@@ -76,7 +76,7 @@
     .card {
       position: relative;
       width: 100%;
-      height: 110%;
+      height: 120%;
       background: var(--background);
       padding: 40px;
       overflow: hidden;
@@ -84,8 +84,9 @@
 
 
     @media (orientation: portrait) {
-     .card {
-        height: 130%;
+     .bigger {
+        height: auto; 
+        min-height: 220%;
      }
     }
 
@@ -127,14 +128,13 @@
 
 
     .floral-bottom-right {
-      bottom: -17%;
-      right: -19%;
+      bottom: -12%;
+      right: -34%;
       width: 75%;
       height: 75%;
       background-image: url('../img/flowers2.png');
       background-position: bottom right;
     }
-
 
     .bottom-right-alt {
       background-image: url('../img/arcalt.png');
@@ -149,6 +149,16 @@
       transform: rotate(126deg);
     }
 
+    @media (orientation: portrait) {
+      .floral-top-center{
+        top: -4%;
+      }
+
+      .bottom-right-alt {
+        bottom: -20%;
+        right: -55%;
+      }
+    }
 
     /* --- Rest of your styles (Typography, Moon, Inner Border) --- */
     .inner-border {
@@ -164,6 +174,12 @@
       box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     }
 
+    @media (orientation: portrait) {
+      .inner-border {
+        border-width: 3px;
+      }
+    }
+
 
     .text-content {
       position: relative;
@@ -177,7 +193,7 @@
 
     @media (orientation: portrait) {
       .text-content {
-        top: 30%;
+        top: 23vh;
         padding: 0 10%;
       }
     }
@@ -215,7 +231,7 @@
 
     @media (orientation: portrait) {
       .header-names {
-        top: 16%;
+        top: 13%;
         left: 25%;
       }
     }
@@ -313,12 +329,16 @@
   /* --- Noisy Gold Crescent Moon --- */
     .crescent-moon {
       position: absolute;
-      top: 15%;
-      left: 48%;
+      top: -95%;
+      left: 18%;
       width: 10vw;
       height: 10vw;
-      transform: translateX(-51%);
       z-index: 4;
+    }
+
+    .homepage-moon {
+      top: 12%;
+      left: 43%;
     }
 
 
@@ -326,8 +346,6 @@
       .crescent-moon {
         width: 20vw;
         height: 20vw;
-        top: 12%;
-        transform: translateX(-55%);
       }
     }
 
@@ -641,10 +659,16 @@ ul li {
   /* 2x2 Grid */
   .grid-2x2 {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr; /* Two equal columns */
+    grid-template-rows: auto; 
     gap: 20px;
     margin-top: 30px;
+  }
+
+  @media (max-width: 768px) {
+    .grid-2x2 {
+      grid-template-columns: 1fr; /* Force single column stack */
+    }
   }
 
   .grid-cell {
@@ -655,10 +679,26 @@ ul li {
     border: 2px solid var(--uicolorlight);
     border-radius: 10px;
     min-height: 80px;
+    font-size: var(--text-size);
+  }
+
+  .grid-centered {
+    grid-column: 1 / -1;    
+  }
+
+  .grid-cell.vertical {
+  flex-direction: column;
+  text-align: center;
 }
 
+  .centered {
+    text-align: center;
+  }
 
-
-    .centered {
-      text-align: center;
-    }
+  .icon {
+    height: 50px; 
+    width: auto;  
+    display: block;
+    filter: brightness(0) saturate(100%) invert(31%) sepia(19%) saturate(1354%) hue-rotate(314deg) brightness(96%) contrast(90%);
+    padding-right: 5px;
+  }
