--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@
       font-weight: normal;
     }
 
+    .spaced-heading {
+      margin-bottom: 10%;
+    }
+
     p {
       font-size: var(--text-size);
       margin: 0;
@@ -128,7 +132,7 @@
 
 
     .floral-bottom-right {
-      bottom: -12%;
+      bottom: -15%;
       right: -34%;
       width: 75%;
       height: 75%;
@@ -267,6 +271,7 @@
     .info {
       margin: 0;
       padding-top: 10%;
+      padding-bottom: 5%;
       text-align: left;
       font-size: var(--text-size);
     }
@@ -330,7 +335,7 @@
     .crescent-moon {
       position: absolute;
       top: -95%;
-      left: 18%;
+      left: 22%;
       width: 10vw;
       height: 10vw;
       z-index: 4;
@@ -341,6 +346,10 @@
       left: 43%;
     }
 
+    .loader {
+      top: 12%;
+      transform: translateX(-40%);
+    }
 
     @media (orientation: portrait) {
       .crescent-moon {
@@ -737,6 +746,10 @@ ul li {
     padding-right: 5px;
   }
 
+  .centered-img {
+    margin: auto;
+  }
+
   .mobile-only {
     display: none;
   }
@@ -754,3 +767,96 @@ ul li {
     }
   }
 
+
+  .high-header {
+    padding-top: 0 !important;
+  }
+
+  .aligned-left {
+    text-align: left;
+  }
+
+  .heart-list {
+    list-style: "♡";
+  }
+
+  .heart-list::marker {
+    font-size: 10px;
+  }
+
+
+  /* TIMELINE */
+
+  .timeline {
+    margin: 0 auto;
+    position: relative;
+    left: 120px;
+    width: 60%;
+    max-width: 900px;
+    margin-top: 16px;
+    margin-left: 5%;
+  }
+
+  .timeline-item {
+    text-align: center;
+    font-size: var(--text-size);
+    padding: 1rem 1.5rem 1rem 1.5rem;
+    border-left: 3px solid var(--accent);
+    border-bottom: 1px solid var(--accent);
+    position: relative;
+    list-style-type: none;
+    --item-width: calc(100%);
+    margin: 0;
+
+    &::after {
+      content: attr(data-date);
+      position: absolute;
+      right: calc(var(--item-width) + 40px);
+      top: 16px;
+      float: right;
+      font-weight: bold;
+      white-space: nowrap;
+    }
+
+    &::before {
+      content: "";
+      border-radius: 50%;
+      width: 16px;
+      height: 16px;
+      background-color: var(--accent);
+      position: absolute;
+      left: -10px;
+      top: 25px;
+    }
+
+    &:last-child {
+      border-bottom: none;
+    }
+  }
+
+  @media only screen and (max-width: 800px) {
+    .timeline {
+      margin: 0 auto;
+      position: relative;
+      left: 85px;
+
+      .timeline-item {
+        font-size: 1.1rem;
+
+        &::after {
+          right: calc(var(--item-width) + 30px);
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width: 800px) {
+    .timeline-item {
+      padding: 1rem 1.5rem 1rem 0.5rem;
+
+      &::after {
+        right: calc(var(--item-width) + 20px);
+      }
+    }
+  }
+  /* TIMELINE end */
